[package]
name = "sc_position_helper"
version = "0.1.0"
edition = "2021"
author = "Yugogamer <57806524+yugogamer@users.noreply.github.com>"
license = "MIT"
description = "A simple helper to find location in star citizen, its also a base library for rust star citizen related project"
readme = "README.md"
homepage = "https://github.com/yugogamer/sc_position_helper"
repository = "https://github.com/yugogamer/sc_position_helper"
keywords = ["cli", "star_citizen", "sc", "position"]
categories = ["command-line-utilities", "library"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clipboard = "0.5.0"
tokio = { version = "1", features = ["full"] }
colored = "2"

[dev-dependencies]
test-case = "2.0.2"

[[bin]]
name = "sc_position_helper"
path = "src/main.rs"

[lib]
name = "sc_position_helper"
path = "src/lib.rs"